# ai-chat

./: .env  .gitignore  ANIMATION-RERENDER-FIX.md  CLAUDE.md  CODE_QUALITY_OPTIMIZATION_PHASE1.md  CODE_QUALITY_REPORT.md  DOCS_CLEANUP_PLAN.md  ELECTRON_MODE_README.md  MessageBridge-V2-TODO.md  MessageBridge-V2-架构文档.md  PROJECT_STATUS.md  README.md  SSC-SDK调用说明.md  SSC_MODE_README.md  TASK-COMPLETION-SUMMARY.md  TOOLCALLCARD-IMPLEMENTATION-SUMMARY.md  WEB_MODE_README.md  deprecated-docs.md  eslint.config.js  main.py  mcp-node-python-bridge-demo.md  mcp-node-python-bridge-requirements.md  mcp-node-tsconfig-dump.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  start-pyws-mcp.ps1  test-messagebridge-ssc.js  tsconfig.json  架构图.md  测试说明.md
.claude/: settings.local.json
.openmcp/: connection.json  tabs.node-mcp-server.json
aidocs/: 000001_redux-multi-platform-best-practice.md  000002_web-chat-call-path-analysis.md  000003_web_hooks_redux_migration.md  000004_engine_hooks_refactor.md  000005_插件系统禁用说明.md  000006_插件系统禁用总结.md  000008_llmclient-stream-glue-memory.md  readme.md
docs/: .gitignore  CORS-README.md  DEBUG_PANEL_SYNTAX_FIX.md  MCP_DEBUG_PANEL_INTEGRATION.md  (+23 more)
mcp-python/example/: http-server-streamable.py  http-server.py  main.py  pyproject.toml
mcp-python/rag/: langchain-faiss用法.md  modelscopetest.py  pyproject.toml  rag_service.py  sql_service.py  url_assistant.py  vector_service.py  ws_test_url_assistant.py  ws_tools.py
mcp-python/rag/scripts/: url_vectorizor.py
mcp-python/rag/vector-store/: index.faiss  index.pkl
(+526 files in other folders)
